--- a/utils/build.gradle
+++ b/utils/build.gradle
@@ -2,6 +2,17 @@ plugins {
     id 'java'
 }
 
+repositories {
+    mavenCentral()
+}
+
+dependencies {
+    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.13.1'
+    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.13.1'
+    implementation 'org.junit.jupiter:junit-jupiter:5.8.1'
+
+}
+
 sourceSets {
     main {
         java {
