--- a/client/build.gradle
+++ b/client/build.gradle
@@ -11,6 +11,7 @@ repositories {
 
 dependencies {
     implementation project(':utils')
+    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.13.1'
 }
 
 sourceSets {
