--- a/server/build.gradle
+++ b/server/build.gradle
@@ -7,6 +7,7 @@ mainClassName = 'it.castelli.tpsit.JavaSocket.ServerMain'
 
 dependencies {
     implementation project(":utils")
+    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.13.1'
 }
 
 repositories {
